--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -2,6 +2,7 @@
 $border: #d7d7d7;
 $bg-gray: #f4f4f4;
 $charcoal: #333;
+$box-shadow: #ccc;
 $thisisdarkblue: #03244d;
 $thisislightblue: #496e9c;
 $thisisiceblue: #e4eeff;
